payment intent create controller added

--- a/src/package.json
+++ b/src/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "mocha",
     "start": "node index.cjs",
-    "dev": "nodemon index.cjs"
+    "server": "nodemon index.cjs"
   },
   "keywords": [],
   "author": "",
